# libsemigroups

./: .appveyor.yml  .ccls  .clang-format  .codecov.yml  .codespellrc  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  CPPLINT.cfg  Dockerfile  Doxyfile  Makefile  Makefile.am  README.MAINTAINER.md  README.md  README.rst  action_8hpp_source.html  adapters_8hpp.html  adapters_8hpp__dep__incl.map  adapters_8hpp__dep__incl.md5  adapters_8hpp__incl.map  adapters_8hpp__incl.md5  adapters_8hpp_source.html  aho-corasick-impl_8hpp_source.html  aho-corasick_8hpp_source.html  annotated.html  appveyor.yml  autogen.sh  azure-pipelines.yml  basics.h  bench-todd-coxeter.sh  bipart_8hpp_source.html  bitset_8hpp_source.html  blocks.cc  (+1722 more)
.github/: runtests.yml
benchmark/: CMakeLists.txt  README  bench-action.cpp  bench-digraph.cpp  bench-orb.cpp  bench_digraph.cpp  bench_main.hpp  bench_orb.cpp  benchmark.sh  build.sh
benchmark/bench/: CMakeLists.txt  cong.cpp  semigroups.cpp
benchmark/cmake/: ConfigSafeGuards.cmake  DownloadProject.cmake
benchmark/src/: CMakeLists.txt  bmat.bm.cpp  bmat8.bm.cpp  cong.bm.cpp  cong.cpp  elements.bm.cpp  examples.h  examples.hpp  nridempotents.bm.cpp  semigroups.bench.cc  semigroups.bm.cpp  semigroups.cpp
benchmark/src/old/: cong.bm.cpp  semigroups.bm.cpp
benchmarks/: README.md  bench-action.cpp  bench-bipartition.cpp  bench-bmat.cpp  bench-digraph.cpp  bench-forest.cpp  bench-freeband.cpp  bench-froidure-pin-parallel.cpp  bench-froidure-pin.cpp  bench-kambites.cpp  bench-knuth-bendix.cpp  bench-konieczny-maxplus.cpp  bench-konieczny-paper-misc.cpp  bench-konieczny-twisted-bipart.cpp  bench-konieczny.cpp  bench-main.cpp  bench-main.hpp  bench-multi-string-view.cpp  bench-multi-view.cpp  bench-rewriters.cpp  bench-rewriting-system.cpp  bench-sims1.cpp  bench-siso.cpp  bench-string-range.cpp  bench-string-view.cpp  bench-todd-coxeter.cpp  bench-todd-coxeter.sh  bench-uf.cpp  bench-wilo.cpp  bench-wislo.cpp  bench-word-graph.cpp  catch.hpp  fpsemi-examples.cpp  fpsemi-examples.hpp  latex_table.py  to_latex_table.py  to_table.py  uf-old.cpp  uf-old.hpp
c-bindings/: CPPLINT.cfg
ci/: azure-gap.sh  check-code-coverage.sh  docker-gap.sh  launch-docker-container.sh  launch-gap-docker-container.sh  lcov-summary.py  run-gap-tests-in-docker-container.sh  run-tests-in-docker-container.sh  travis-benchmark.sh  travis-compile-warnings.sh  travis-config-options.sh  travis-coverage.sh  travis-cppyy.sh  travis-debug.sh  travis-distcheck.sh  travis-doc.sh  travis-external-fmt.sh  travis-extra.sh  travis-format.sh  travis-gap.sh  travis-hpcombi.sh  travis-lint.sh  travis-quick.sh  travis-setup-hpcombi.sh  travis-setup.sh  travis-standard.sh  travis-valgrind.sh  travis-verbose.sh  travis.sh
cilk/: Makefile  bmat_trim_enum_4.txt  bmat_trim_enum_5.txt  bmat_trim_enum_6.txt  bmat_trim_enum_7.txt  filter.cpp  filter2.cpp  gossip.cpp  gossip.sage  printmat.cpp  rsincl.cpp
cong/: kbfp.cc  kbfp.h  kbp.cc  kbp.h  p.cc  p.h  tc.cc  tc.h
docs/: Congruences.md  Doxyfile  Doxyfile.bak  Doxyfile.old  DoxygenLayout.xml  KnuthBendix.md  Makefile  WordGraphs.md  Words.md  action.md  authors.md  changelog-v1.md  changelog-v2.md  changelog-v3.md  cldoc-fix  cldoc-fixed.css  custom.css  deprecate.md  environment.yml  fixup.py  fpsemi-examples.md  generate_from_yml.py  header.html  index.md  install.md  libsemigroups.bib  other.md  requirements.txt  semigroupe.md  to-table.tex  todd-coxeter-report.md  z-biblio.md
docs-old/: Makefile
etc/: bad-assert.py  bench-renumber.sh  bench_sims1_plot.py  benchmark.sh  check-quick-report-guard.py  check_doc_order.py  check_doxygen_line_breaks.py  convert-rst-to-doxy.vim  coverage.sh  create-log.sh  debug.sh  deploy-doc.sh  extract-doc-examples.py  find-failing-test-case.sh  find-failing-test.sh  generate-catch-from-kbmag.g  generate-intersection-test.g  generate-libsemigroups-hpp.py  generate-pybind11.py  generate-tietze-findif-tests.py  generate_1_relation_markdown.py  generate_1_relation_tests.py  generate_eigen_makefile_am.py  generate_pybind11.py  install-libsemigroups.sh  kbmag.g  knuth_bendix_test_times.md  lcov-summary.py  make-dev-environment.sh  make-doc-sphinx.sh  make-doc-test.sh  make-doc-yml.sh  make-doc.sh  make-format.sh  make-lint.sh  ndebug.sh  post-proc-doc.sh  process_1_relation.py  process_tc_output.py  release-libsemigroups.py  (+12 more)
examples/: README
include/: action.hpp  adapters.h  adapters.hpp  blocks.h  blocks.hpp  bmat8.h  bmat8.hpp  bruidhinn-traits.hpp  cong-base-impl.hpp  cong-base.hpp  cong-intf.h  cong-intf.hpp  cong-new.cc  cong-new.h  cong-p.h  cong-pair-impl.hpp  cong-pair.hpp  cong-wrap.h  cong-wrap.hpp  cong.h  cong.hpp  constants.h  constants.hpp  containers.hpp  coset.hpp  digraph.hpp  element-helper.h  element-helper.hpp  element.h  element.hpp  forest.hpp  fpsemi-base.hpp  fpsemi-intf.h  fpsemi-intf.hpp  fpsemi.h  fpsemi.hpp  froidure-pin-base.hpp  froidure-pin-impl.hpp  froidure-pin.hpp  function-ref.hpp  (+50 more)
libsemigroupsplusplus/: blocks.h  cong.cc  cong.h  elements.cc  elements.h
m4/: ax_check_alglib.m4  ax_check_backward.m4  ax_check_catch.m4  ax_check_eigen.m4  ax_check_fmt.m4  ax_check_hpcombi.m4  ax_check_magic_enum.m4
old-benchmarks/: bench-action.cpp  bench-main.hpp  bench-todd-coxeter.cpp
python/: generate_pybind11.py
python-bindings/: .gitignore  MANIFEST.in  README.md  TODO  semigroups.pyx  semigroups_cpp.cpp  semigroups_cpp.h  semigroups_cpp.pxd  setup.cfg  setup.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  (+188 more)
test/: CPPLINT.cfg  FpSemigroup.test.py  Makefile.am  Makefile.old  blocks.test.cc  catch.hpp  cong.test.cc  elements.test.cc  kbfp.test.cc  kbp.test.cc  p.test.cc  partition.test.cc  recvec.test.cc  report.test.cc  rws.test.cc  rwse.test.cc  semigroups.bench.cc  semigroups.test.cc  semiring.test.cc  sims.test.cc  tc.test.cc  uf.test.cc
test/old/: report.test.cc
(+1432 files in other folders)
